Fix font size not scaling well on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1830,6 +1830,10 @@ a:hover.back-to-top {
 }
 
 @media (max-width: 992px) {
+	.header .image-container h2 {
+		font-size: 4em;
+	}
+
 	.team-card-container {
 		grid-template-columns: repeat(1, 1fr);
 		grid-template-rows: repeat(6, auto);
@@ -1840,5 +1844,15 @@ a:hover.back-to-top {
 		margin-left: 0;
 		margin-right: 0;
 		padding: 0;
+	}
+}
+
+@media (max-width: 700px) {
+	.demo-img {
+		width: 100%;
+		margin-left: 0;
+		margin-right: 0;
+		padding: 0;
+		margin-bottom: 150px;
 	}
 }
